# sales-rpg-ai

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  DONE.md  DUAL_CAPTURE_IMPLEMENTATION.md  Dockerfile  Dockerfile.whisper  GITHUB_MODELS_QUICKSTART.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPT_build_verify.md  PROMPT_plan_verify.md  PROMPT_verify.md  QUICKSTART.md  README.md  analyze_transcripts.py  docker-compose.cloud.yml  docker-compose.gpu.yml  docker-compose.yml  dual_capture_cli.py  main.py  output.srt  prd.json  progress.txt  pyproject.toml  test_diarization.py  test_providers.py  test_rag_providers.py  validation.db
.claude/: settings.local.json
.claude/worktrees/agent-ab718158/.claude/worktrees/agent-ae3c8263/: pyproject.toml
.claude/worktrees/agent-ab718158/.claude/worktrees/agent-ae3c8263/docs/product/: prd-docker-deployment.md  prd-phase3-conversation-state.md
.claude/worktrees/agent-ab718158/.claude/worktrees/agent-ae3c8263/knowledge_base/: kubecraft_script.md
.claude/worktrees/agent-ab718158/.claude/worktrees/agent-ae3c8263/src/: test_audio_capture.py
.claude/worktrees/agent-ab718158/.claude/worktrees/agent-ae3c8263/src/realtime/: analysis_orchestrator.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: DUAL_CAPTURE_GUIDE.md  DUAL_CAPTURE_README.md  architecture_notes.md  audio-capture-architecture.md  github-models-setup.md  mvp-pivot-roadmap.md  mvp.md  project-spec.md  sales-call-cheatsheet.md  threat_model.md  vexa-setup.md
knowledge_base/: Austins_Sales_Playbook.docx  buyer_archetypes.yaml  closing_patterns.md  decision_tree.yaml  decision_tree_template.yaml  full_transcript_analysis.json  hardly_selling_methodology.md  transcript_analysis.json
models/: llama3-8b.yaml  phi-3.5-mini.yaml
scripts/: feed_recording.py  modal_vllm_serve.py
(+108 files in other folders)
