[project]
name = "sales-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "websockets>=10.0",
    # VadTranscriber (default transcription engine)
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.20.0",
    # RAG pipeline (script retrieval)
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
]

whisperlivekit = [
    "whisper-live @ git+https://github.com/collabora/WhisperLive.git",
    "whisperlivekit[whisper]>=0.1.0",
    "pyaudio>=0.2.11",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
